feat: expose configurable built-in kernels